--- a/package.json
+++ b/package.json
@@ -7,45 +7,50 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "build:demo": "ng build --prod --base-href /ngx-smart-routing-demo/",
-    "deploy": "gh-pages -d dist/ngx-smart-routing-demo"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.9",
-    "@angular/common": "~7.2.9",
-    "@angular/compiler": "~7.2.9",
-    "@angular/core": "~7.2.9",
-    "@angular/forms": "~7.2.9",
-    "@angular/platform-browser": "~7.2.9",
-    "@angular/platform-browser-dynamic": "~7.2.9",
-    "@angular/router": "~7.2.9",
+    "@angular/animations": "~8.2.3",
+    "@angular/common": "~8.2.3",
+    "@angular/compiler": "~8.2.3",
+    "@angular/core": "~8.2.3",
+    "@angular/fire": "^5.2.1",
+    "@angular/forms": "~8.2.3",
+    "@angular/platform-browser": "~8.2.3",
+    "@angular/platform-browser-dynamic": "~8.2.3",
+    "@angular/router": "~8.2.3",
     "core-js": "^3.0.0",
-    "rxjs": "~6.4.0",
+    "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.29"
+    "zone.js": "~0.9.1",
+    "firebase": ">= 5.5.7 <7"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.6",
-    "@angular/cli": "~7.3.6",
-    "@angular/compiler-cli": "~7.2.9",
-    "@angular/language-service": "~7.2.9",
-    "@types/jasmine": "~3.3.12",
+    "@angular-devkit/build-angular": "~0.803.0",
+    "@angular/cli": "~8.3.0",
+    "@angular/compiler-cli": "~8.2.3",
+    "@angular/language-service": "~8.2.3",
+    "@types/jasmine": "~3.4.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~11.11.3",
-    "codelyzer": "~5.0.0-beta.1",
+    "@types/node": "~12.7.2",
+    "codelyzer": "^5.0.1",
     "gh-pages": "^2.0.1",
-    "jasmine-core": "~3.3.0",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.0.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.5",
+    "karma": "~4.3.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.2",
-    "ts-node": "~8.0.3",
-    "tslint": "~5.14.0",
-    "typescript": "3.1.1"
+    "ts-node": "~8.3.0",
+    "tslint": "~5.19.0",
+    "typescript": "3.5.3",
+    "@angular-devkit/architect": "<0.900 || ^0.900.0-0 || ^9.0.0-0",
+    "firebase-tools": "^6.10.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1"
   }
 }
